# clearcv

./: .gitignore  README.md  pyproject.toml  requirement_dev.txt
clearcv/: __init__.py  ops.py
clearcv/metrics/: __inti__.py  psnr.py  ssim.py
clearcv/utils/: __init__.py  kernels.py
tests/: test_ops.py  test_psnr.py  test_ssim.py
