[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearcv"
version = "0.1.1"
description = "ClearCV — a lightweight, NumPy-based computer vision toolkit built in Python."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Navaneetha Krishnan", email = "nkrishnan.laksh@gmail.com" }
]
keywords = ["computer-vision", "image-processing", "numpy", "clearcv"]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
extras = ["imageio", "matplotlib"]



